--- a/src/main/resources/es.properties
+++ b/src/main/resources/es.properties
@@ -34,7 +34,9 @@
 
 #index.analysis.analyzer.projectx_standard.type=standard
 #index.analysis.analyzer.projectx_standard.filter=[lowercase]
-path.data=./target/es/data
+#path.data=./target/es/data
+#the following path assumes the directory exists and has write permission for tomcat user
+path.data=/etc/scrutmydocs/target/es/data
 
 cluster.name=scrutmydocs
 discovery.zen.ping.multicast.enabled=false
