elasticsearch pat set to /home/elasticsearch/data

--- a/src/main/resources/es.properties
+++ b/src/main/resources/es.properties
@@ -35,8 +35,9 @@
 #index.analysis.analyzer.projectx_standard.type=standard
 #index.analysis.analyzer.projectx_standard.filter=[lowercase]
 #path.data=./target/es/data
-#the following path assumes the directory exists and has write permission for tomcat user
-path.data=/etc/scrutmydocs/target/es/data
+#the following path assumes the directory exists and the application 
+# server user (e.g. tomcat7) has write permissions to it
+path.data=/home/elasticsearch/data
 
 cluster.name=scrutmydocs
 discovery.zen.ping.multicast.enabled=false
